# ml-evaluator

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING_GUIDE.md  README.md  ml_evaluator_demo.ipynb  pyproject.toml  setup.py
ml_evaluator/: __init__.py  _utils.py  bias_variance.py  comparison.py  evaluation.py
