[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-evaluator"
version = "1.0.2"
description = "Model Evaluation Toolkit — bias-variance analysis, ROC curves, model summary & multi-model comparison"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
  { name = "ml-evaluator contributors" }
]
keywords = [
  "machine learning", "model evaluation", "bias variance",
  "ROC curve", "classification", "sklearn"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "matplotlib>=3.4",
  "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "twine", "build"]

[project.urls]
Homepage   = "https://github.com/abdelrahmanmah/ml-evaluator"
Repository = "https://github.com/abdelrahmanmah/ml-evaluator"
Issues     = "https://github.com/abdelrahmanmah/ml-evaluator/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["ml_evaluator*"]
